build_log_2.txt
    Checking vaultsync v0.1.0 (D:\Projects\VaultSync)
warning: unused import: `crate::buylist::BuylistService`
 --> src\api\mod.rs:1:5
  |
1 | use crate::buylist::BuylistService;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::inventory::InventoryService`
 --> src\api\mod.rs:3:5
  |
3 | use crate::inventory::InventoryService;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::pricing::PricingService`
 --> src\api\mod.rs:4:5
  |
4 | use crate::pricing::PricingService;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::transactions::TransactionService`
 --> src\api\mod.rs:5:5
  |
5 | use crate::transactions::TransactionService;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0609]: no field `system` on type `SystemServices`
    --> src\api\handlers\..\handlers_legacy.rs:2532:24
     |
2532 |     match state.system.system.notification_scheduler.run_scheduled_tasks().await {
     |                        ^^^^^^ unknown field
     |
     = note: available fields are: `audit`, `events`, `barcode`, `receipts`, `invoices` ... and 10 others

For more information about this error, try `rustc --explain E0609`.
warning: `vaultsync` (lib) generated 4 warnings
error: could not compile `vaultsync` (lib) due to 1 previous error; 4 warnings emitted
